resources/styles.css
* {
	box-sizing: border-box;
}
html, body {
	height: 100%;
	margin: 0;
}
body {
	background: #222;
	transition: all 0.5s ease;
}
body::after {
	opacity: 0.1;
	background: linear-gradient(148deg, rgba(46,46,46,1) 0%, rgba(42,42,42,1) 44%, rgba(22,22,22,1) 100%);
}
body.weapon {
	background: rgb(32, 28, 26);
}
body.armor {
	background: rgb(37, 37, 33);
}
body.wearable {
	background: rgb(33, 37, 34);
}
html.dark-mode {
	filter: invert(1);
}
.container {
	max-width: 960px;
	padding: 20px 30px;
	margin: 0 auto;
	padding-bottom: 28px;
}
.main-container {
	animation: fadein 800ms;
	background-color: rgba(245, 245, 245, 0.03);
	-webkit-box-shadow: 0 4px 12px 0 rgba(0,0,0,0.3);
	-moz-box-shadow: 0 4px 12px 0 rgba(0,0,0,0.3);
	box-shadow: 0 4px 12px 0 rgba(0,0,0,0.3);
}
.row {
	display: flex;
}
.row.second-row {
	margin-top: 6px;
}
input, select, textarea {
	width: 100%;
	display: block;
	font-size: 13px;
	padding: 8px 10px 6px;
	border-radius: 8px;
	color: rgba(255,255,255,.87);
	background-color: rgba(245, 245, 245, 0.2);
	border: none;
	transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
	-webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
	-moz-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
	box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
}
select {
	cursor: pointer;
	padding: 5px 12px;
	border-right: solid 8px transparent;
}
select option {
	color: #000;
}
input:hover, select:hover, textarea:hover {
	background-color: rgba(245, 245, 245, 0.25);
}
input:active, select:active, textarea:active {
	outline: none;
	background-color: rgba(245, 245, 245, 0.3);
}
input:focus, select:focus, textarea:focus {
	outline: none;
}
input:disabled, select:disabled, textarea:disabled {
	background-color: rgba(150, 150, 150, 0.1);
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}
input:disabled:active, select:disabled:active, textarea:disabled:active {
	background-color: rgba(100, 100, 100, 0.15);
}
label {
	color: rgba(245, 245, 245, 0.75);
	text-transform: uppercase;
	font-size: 10px;
}
.requirements, .skillmod-error {
	opacity: 0;
	display: block;
	position: relative;
	transform: translateY(-1px);
	color: rgba(245, 245, 245, 0.65);
	text-transform: uppercase;
	font-size: 8px;
	transition: all 400ms cubic-bezier(0.8, 0, 0.1, 1);
}
.input-wrapper:hover .requirements {
	transform: translateY(4px) scale(1) !important;
	opacity: 1 !important;
}
.textWarning {
	animation: textWarning 3s;
}
.input-wrapper {
	flex-grow: 1;
	margin-right: 24px;
}
.input-wrapper:last-child {
	margin-right: 0;
}
.checkbox-wrapper {
	flex-grow: 0;
	text-align: center;
}
input, select, label, h1, h2, h3, span, button, p {
	font-family: 'Roboto', sans-serif;
}
h1, h2, h3, span, p, label {
	cursor: default;
	user-select: none;
}
h1, h2, h3 {
	color: rgba(245, 245, 245, 0.9);
	font-weight: 400;
	margin-top: 8px;
	margin-bottom: 4px;
}
h1 {
	font-weight: 300;
}
p {
	color: rgba(245, 245, 245, 0.9);
}
#output {
	width: 100%;
	padding: 12px 14px;
	resize: none;
}
.center {
	margin: 0 auto;
}
button {
	color: rgba(245, 245, 245, 0.8);
	font-weight: 300;
	border: 1px solid rgba(245, 245, 245, 0.1);
	background-color: rgba(245, 245, 245, 0.03);
	border-radius: 8px;
	cursor: pointer;
	transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
button:hover {
	border: 1px solid rgba(245, 245, 245, 0.2);
}
button:active {
	outline: none;
	background-color: rgba(245, 245, 245, 0.4);
}
button:focus {
	outline: none;
}
input[type="checkbox"] {
	height: 1.8em;
	width: 1.8em;
}
input[type="checkbox"]:hover, input[type="checkbox"]:active {
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}
#copyText {
	font-size: 18px;
	padding: 12px 18px;
}
#toggleMode {
	font-size: 18px;
	width: 32px;
	height: 32px;
	text-align: center;
}
footer {
	animation: fadein 800ms;
}
nav .container {
	display: flex;
	align-items: center;
  	justify-content: center;
	padding: 3px 30px;
}
footer .container {
	display: flex;
	padding: 8px 30px;
}
#menu-bar {
	cursor: default;
	height: 22px;
	padding: 0 8px;
	background-color: rgba(0,0,0,0.4);
}
#menu-buttons-wrap {
	position: absolute;
	top: 0;
	right: 0;
}
#menu-buttons-wrap .menu-button {
	cursor: pointer;
    height: 22px;
    width: 32px;
    text-align: center;
    position: relative;
    opacity: .6;
    pointer-events: auto;
    display: inline-block;
    padding: 2px 6px;
	z-index: 9999;
}
#menu-buttons-wrap .menu-button:hover {
	opacity: 1;
}
.close-button:hover {
	background-color: #d25757;
}
.page-title {
	cursor: default;
	user-select: none;
	pointer-events: none;
	margin: 0;
	animation: fadein 300ms;
}
nav .container div {
	flex: 1;
}
#navigation {
	text-align: right;
	animation: fadein 800ms;
}
#navigation button {
	padding: 8px;
	margin: 0 3px;
	border: none;
	border-radius: 0;
}
#navigation button.active {
	border-bottom: 1px solid rgba(245, 245, 245, 0.2);
}
#navigation button:hover {
	background-color: rgba(245, 245, 245, 0.08);
}
#navigation button:active {
	color: rgba(255, 255, 255, 1);
}
#navigation button:disabled {
	cursor: default;
	pointer-events: none;
	opacity: 0.6;
}
.tab-content {
	display: none;
}
.content-selected {
	display: block;
}
.toggle-container {
	animation: fadein 800ms;
	text-align: right;
}
footer p {
	font-weight: 100;
}
a {
	text-decoration: none;
	color: #777;
}
a:hover {
	color: #aaa;
}
a:active, a:focus {
	color: #666;
}
::selection {
	background: #aaa;
}
hr {
	border-color:rgba(245, 245, 245, 0.1);
}
.fadein {
	animation: fadein 300ms;
}
@keyframes fadein {
	0% { opacity: 0; }
	40%   { opacity: 0; }
	100%   { opacity: 1; }
}
@keyframes textWarning {
	0%   { color: rgba(255, 86, 86, 1);opacity:1;transform: translateY(6px); }
	80%  { color: rgba(255, 86, 86, 1);opacity:1;transform: translateY(6px); }
	100% { color: rgba(245, 245, 245, 0.65);opacity:0;transform: translateY(-4px); }
}

::-webkit-scrollbar {
	width: 4px;
}

::-webkit-scrollbar-track {
	background-color: transparent;
}

::-webkit-scrollbar-thumb {
	background-color: #222;
	border-radius: 4px;
}

::-webkit-scrollbar-button {
	height: 0px;
	background-color: transparent;
}

::-webkit-scrollbar-corner {
	background-color: transparent;
}

